# minddistill

./: CHANGELOG.md  README.md  SKILL.md  engine.py  package.json  product_convergence.json  pyproject.toml  skill-check-report-20260724-221916.html  skill-report.html
docs/: README.md
geo_diag/: __init__.py  campaign.py  engine.py  fixer.py  platform_check.py
geo_diag/connectors/: _http.py
references/: detail.md  full-skill.md
scripts/: cli.py  doctor.py  minddistill_api.py  minddistill_history_store.py  transformers_bridge.py
tests/: test_cli.py  test_transformers_bridge.py
